# QmlAppTemplate

./: CMakeLists.txt  README.md
i18n/: module.cmake  ru_RU.ts  ts2excel.py  update.sh
qml/: DesktopApplication.qml  DesktopHeader.qml  DesktopSidebar.qml  MobileApplication.qml  MobileDrawer.qml  MobileHeader.qml  MobileMenu.qml  MobilePermissions.qml  PageButtons.qml  PageColors.qml  PageDateTime.qml  PageDialogs.qml  PageIndicators.qml  PageSelectors.qml  PageSliders.qml  PageTextFields.qml  PageTickers.qml  ScreenAbout.qml  ScreenDesktopComponents.qml  ScreenFontInfos.qml  ScreenHostInfos.qml  ScreenMainView.qml  ScreenMobileComponents.qml  ScreenSettings.qml  ThemeEngine.qml  WindowGeometrySaver.qml  components.qrc  qml.qrc
qml/components_generic/: ActionMenuItem.qml  ActionMenu_bottom.qml  ActionMenu_floating.qml  AndroidButton.qml  AndroidButtonIcon.qml  AndroidTextField.qml  ButtonCompactable.qml  ButtonImage.qml  ButtonText.qml  ButtonWireframe.qml  ButtonWireframeIcon.qml  ButtonWireframeIconCentered.qml  DataBarCompact.qml  DataBarSolid.qml  DatePicker6.qml  DesktopHeaderItem.qml  DesktopSidebarItem.qml  DrawerButton.qml  DrawerItem.qml  FpsMonitor.qml  FrameBox.qml  IconSvg.qml  ListItem.qml  ListItemClickable.qml  ListSeparator.qml  ListSeparatorPadded.qml  ListTitle.qml  MiddleSliderArrow.qml  MiddleSliderValueSolid.qml  MobileMenuItem_horizontal.qml  MobileMenuItem_vertical.qml  RangeSliderArrow.qml  RangeSliderValueSolid.qml  RoundButtonIcon.qml  RoundButtonText.qml  SectionTitle.qml  SelectorMenuItem.qml  SliderArrow.qml  SliderValueSolid.qml  ToolTipFlat.qml
qml/components_themed/: ButtonIconThemed.qml  ButtonThemed.qml  CheckBoxThemed.qml  ComboBoxThemed.qml  DialThemed.qml  DrawerThemed.qml  FrameThemed.qml  GroupBoxThemed.qml  ItemDelegateThemed.qml  MiddleSliderThemed.qml  PageIndicatorThemed.qml  PaneThemed.qml  ProgressBarThemed.qml  RadioButtonThemed.qml  RangeSliderThemed.qml  RippleThemed.qml  RoundButtonIconThemed.qml  RoundButtonThemed.qml  ScrollBarThemed.qml  SelectorMenuThemedItem.qml  SliderThemed.qml  SpinBoxThemed_desktop.qml  SpinBoxThemed_mobile.qml  SwitchThemed_desktop.qml  SwitchThemed_mobile.qml  TextAreaThemed.qml  TextFieldThemed.qml  TumblerThemed.qml
qml/popups/: PopupChoice.qml  PopupDate6.qml  PopupMessage.qml  PopupTime.qml
src/: main.cpp
